refactor: add start_client_trace and start_server_trace in tracing
Signed-off-by: Jiaxiao (mossaka) Zhou <duibao55328@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ tokio = { version = "1", features = ["rt", "sync", "io-util", "macros", "time"],
 futures = { version = "0.3", optional = true }
 crossbeam = "0.8.0"
 
-opentelemetry = { version = "0.27" }
-opentelemetry_sdk = { version = "0.27" }
+opentelemetry = { version = "0.27", default-features = false, features = ["trace"] }
+opentelemetry_sdk = { version = "0.27", default-features = false, features = ["trace"] }
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = {version = "0.48", features = [ "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_Security", "Win32_System_Threading"]}
